assets/styles/style.css
*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
html {
  font-family: 'Segoe UI', Arial;
  position: relative;
  min-height: 100%;
}
body {
  background-color: #9394A1;
  color: #ffffff;
  text-align: center;
  height: 100%;
}
input:focus, select:focus, textarea:focus, button:focus {
  outline: none;
}
h1 {
  display: block;
  margin: auto;
  margin-bottom:10px;
  padding-bottom:10px;
  text-align: center;
  border-bottom: 1px solid #ffffff
}

h2{
  margin: 20px 0 0 0 ;
}
.hidden {
  display: none !important;
}

h5{
  margin-top:5px;
}

.config_global {
  display: block;
  text-align: center;
  margin-bottom: 25px
}
.config_global .config_wrap{
  display:inline-block;
  width:100px;
  text-align: center;
  font-size:12px;
  line-height: 18px;
}
.config_global .config_wrap *{
  display:block;
  margin:auto;
}
.config_global input {
  font-size: 20px;
  width: 40px;
  height: 40px;
  text-align: center;
  background: transparent;
  border: 1px solid #ffffff;
  color: #ffffff;
}
.config_global input.disabled, .config_global button.disabled{
  background-color: #ffffff;
  color:#9394A1;
}


.setsize, .makepdf, .config_screen button, .opt_wrap.remove button{
  background:0;
  display: block;
  margin:auto;
  margin-top:25px;
  border:1px solid #ffffff;
  color:#ffffff;
  padding:10px;
  font-size:16px;
  font-weight: bold;
}
.setsize:not(.disabled):hover, .makepdf:not(.disabled):hover, .config_screen button:hover, .opt_wrap.remove button:hover{
  background-color: #ffffff;
  color: #9394A1;
  cursor: pointer;
}

.config_screen button{
  margin-top:5px;
  padding:3px;
}

.opt_wrap.remove button{
  margin-top:0;
  padding:1px 3px;
  background-color:red;
  color:white;
  font-size: 12px;
}

.makepdf {
  display: block;
  margin: auto;
  margin-bottom:25px;
}
.dropzone input {
  width: 100%;
  height: 100%;
  cursor: pointer;
  opacity: 0;
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}
.dropzone {
  position: relative;
  border: 2px dashed #fff;
  margin-bottom:25px;
  padding: 25px;
  text-align: center;
  font: 20px bold'Segoe UI';
  color: #fff;
}
.fa-cloud-upload {
  display: block;
  font-size: 100px;
}
.blueborder {
  border: 2px solid #565773;
  color: #565773;
}
.blueborder .fa-cloud-upload {
  color: #565773;
}
.step2 h2{
  text-align: left;
}
#list {
  display: block;
  text-align: left;
  margin-bottom: 25px;
}
.fileinfo {
  text-align: center;
  line-height: 20px;
  min-width: 200px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  font-weight: bold;
  background-color: #262646;
  border-bottom: 1px solid white;
}
.thumb_wrap {
  position: relative;
  display: inline-block;
  text-align: left;
  background-color: #565773;
  border: 4px solid #aaaaaa;
  line-height: 0;
  vertical-align: top;
  margin:0 2px;
  text-align: center;
}
.thumb_wrap:not(.dragging):hover {
  border-color: #ffffff;
}
.thumb_wrap:hover .thumb_crop {
  /*width:200px;*/
}
.thumb_wrap:hover .thumb_crop span {
  /*margin-left: -400px;*/
}
.thumb_wrap *:not(.drag_overlay) {
  user-drag: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
}
.thumb_crop {
  display: inline-block;
  height: 200px;
  width: 100px;
  overflow: hidden;
  text-align: center;
  position: relative;
}
.thumb_crop span {
  display: block;
  width: 1000px;
  margin-left: -450px;
  height: inherit;
}
.thumb {
  height: inherit;
  display: inline-block;
}
[draggable="true"] {
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  /* Required to make elements draggable in old WebKit */
  -khtml-user-drag: element;
  -webkit-user-drag: element;
}
.dragging {
  border: 5px dashed orange;
}
.dragover {
  /*border: 5px solid #565773;*/
  border: 5px solid orange;
}
.dragover:after {
  font-family: 'FontAwesome';
  content: "\f063";
  color: orange;
  font-size: 32px;
  position: absolute;
  top: -20px;
  left: -20px;
}
.drag_overlay {
  position: absolute;
  height: 200px;
  width: 100%;
  z-index: 5;
  bottom: 0;
  cursor: move;
}
/*not used anymore*/

.notincluded .drag_overlay {
  background: url('../img/cross.png') no-repeat;
  background-size: 100% 100%;
  opacity: 0.7;
}
/*end not used anymore*/

.notincluded .bg_cross {
  position: absolute;
  height: 100%;
  width: 100%;
  content: url('../img/cross.png');
  background-size: 100% 100%;
  opacity: 0.7;
}
.config_screen {
  position: relative;
  line-height: 18px;
  text-align: center;
  margin-top:5px;
  margin-bottom:5px;
}
.config_screen .margins_wrap {
  position: absolute;
  left: 0;
  bottom: -205px;
  width: 100%;
  height: 205px;
  background-color: #565773;
  z-index: 7;
  padding-top: 15px;
}
.config_screen .margins {
  position: relative;
  height: 100%;
  width: 100%;
  padding: 10px;
}
.config_screen .margin {
  text-align: right;
  width: 125px;
  margin: auto;
}
.margins input, .margins label {
  position: relative;
  display: inline-block;
}
.config_screen .margin.msg, .opt_wrap span {
  font-size: 11px;
  line-height: 12px;
}
.config_screen .margin input {
  width: 50px;
}
.config_screen .margins label {
  margin-right: 5px;
}
.config_screen .margins .top {
  margin-top: 10px;
}
.config_screen .margins .right {
  margin-bottom: 10px;
}
.config_screen .margins .regen {
  margin-top: 10px;
}
.config_screen .opt_wrap {
  width: 50px;
  display: inline-block;
  z-index: 6;
}
.config_screen .opt_wrap * {
  display: block;
  width: 100%;
  margin: 0;
}
.opt_wrap.remove {
  z-index: 6;
  position: absolute;
}
.opt_wrap.margin_btn {
  margin-left: 10px;
  margin-right: 10px;
}
.thumb_crop .remove {
  right: 0;
}
.modal {
  position: absolute;
  width: 100%;
  min-height: 100%;
  top: 0;
  left: 0;
  z-index: 7;
  background-color: rgba(0, 0, 0, 0.6);
}
.modal .preview_wrap {
  position: relative;
  width: 80%;
  text-align: center;
  margin: auto;
  margin-top:100px;
  margin-bottom:100px;
}
.modal .preview_wrap img{
  max-width: 100%;
}

